Correccion variables de entorno